--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Split Color</title>
+    <title>Arshak</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.cdnfonts.com/css/made-tommy-outline" rel="stylesheet">
 </head>
 <body>
     <div class="box1">
@@ -14,9 +15,21 @@
     <div class="dp">
         <img src="img/logo icon.png" alt="" width="110px" height="110px">
         <p>FEW COMPANIES l’VE WORKED WITH:</p>
-    
+    </div>
     <div class="box">
         <img src="img/oru com- logo.png" alt="" width="200px" height="30px">
     </div>    
+    <div class="tet">
+        <br>
+        <h1>Traveler.Filmmaker.
+        <br>
+             Designer.</h1>
+    </div>
+    <div class="cc">
+        <p><img src="img/loc.png" width="14px" height="17px"/>  india based</p>
+    </div>
+    <div class="tet">
+        <p><b>About</b></p>
+    </div>
 </body>
 </html>
